k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapper-gateway
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scrapper-gateway
  template:
    metadata:
      labels:
        app: scrapper-gateway
    spec:
      containers:
      - name: scrapper-gateway
        image: erizo9/scrappergateway:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: scrapper-gateway-svc
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: scrapper-gateway
  type: NodePort
